--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "theme",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "home.html",
+	"homepage": "https://a-maged.github.io/shopper-theme/",
 	"scripts": {
 		"dev": "parcel templates/home.pug",
 		"build": "parcel build templates/home.pug --out-dir docs"
